<resources>
    <string name="app_name">Pocket Scanner</string>

    <string name="activity_main_pages_empty">No documents to process</string>
    <string name="activity_main_map_text">Explore</string>
    <string name="activity_main_camera_text">Capture</string>
    <string name="activity_main_gallery_text">Choose</string>
    <string name="activity_main_process_text">Process</string>

    <string name="page_item_pending_text">Pending</string>
    <string name="page_item_detecting_text">Reading text&#8230;</string>
    <string name="page_item_translating_text">Translating&#8230;</string>
    <string name="page_item_finished_text">Done!</string>
    <string name="page_item_error_text">Error: no text!</string>

    <string name="activity_page_share_text">Share</string>

    <string name="dialog_share_type_text">What is this document?</string>
    <string name="dialog_share_type_information">Information</string>
    <string name="dialog_share_type_warning">Warning</string>
    <string name="dialog_share_duration_text">How long is this relevant?</string>
    <string name="dialog_share_duration_day">1 day</string>
    <string name="dialog_share_duration_days">3 days</string>
    <string name="dialog_share_duration_week">7 days</string>
    <string name="dialog_share_duration_month">30 days</string>
    <string name="dialog_share_submit_btn">Submit</string>
    <string name="dialog_share_cancel_btn">Cancel</string>

    <string name="language_from_default_value">sr</string>
    <string name="language_to_default_value">en</string>
</resources>
